# multmodal_retriever

./: .gitignore  Dockerfile  helprs.py  installed_packages.txt  pyproject.toml  requirements.txt  st_db.py
configs/: configs.py
notebooks/: MPM_Projekt.py
src/: build_vector_database_04.py  clean_images_05.py  create_image_retriever_06.py  restructure_data_03.py  sanitize_data_02.py  track_files_01_eda.py
utils/: utils.py
