[tool.poetry]
name = "mpm-projekt"
version = "0.1.0"
description = "projekt to structure data"
authors = ["tempathack <tobias_schmidbauer@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fitz = "^0.0.1.dev2"
pytesseract = "^0.3.13"
textract = "^1.6.5"
openai = "^1.45.1"
langchain-community = "^0.3.0"
langchain = "^0.3.0"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
pypdf = "^4.3.1"
tqdm = "^4.66.5"
langgraph = "^0.2.22"
transformers = "^4.44.2"
streamlit = "^1.38.0"
pygwalker = "^0.4.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
